fix: main content overflow scrolling.

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -447,6 +447,7 @@ button {
   flex-direction: column;
   padding: 0px 40px 10px;
   overflow-y: auto;
+  overflow-x: hidden;
   position: relative;
   height: 100%;
 }
